入れ忘れの画像追加

--- a/src/service.html
+++ b/src/service.html
@@ -303,6 +303,7 @@
             </div>
         </section>
         <section class="service__flow">
+            <img class="flow__chara" src="./assets/images//service/flow_chara.svg" alt="">
             <div class="page__title--inner">
                 <p class="page__subTitle">FLOW</p>
                 <h2 class="page__title">サービスの流れ</h2>
@@ -378,7 +379,7 @@
                 </div>
             </div>
             <div class="bgPinkText__inner palePink">
-                <p class="bgPinkText">TMC TMC TMC TMC TMC</p>
+                <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC</p>
             </div>
         </section>
         <section class="service__message message">
