--- a/src/service.html
+++ b/src/service.html
@@ -342,7 +342,7 @@
         <section class="service__introduction">
             <div class="page__title--inner">
                 <p class="page__subTitle">引越しが楽しくなる！</p>
-                <h2 class="page__title">こだわりの段ボール紹介</h2>
+                <h2 class="page__title">こだわりの<br class="sp-br">段ボール紹介</h2>
             </div>
             <div class="introduction__column">
                 <div class="introduction__size">
