topページ修正

--- a/src/index.html
+++ b/src/index.html
@@ -420,7 +420,7 @@
                         <div class="secretList__item--textArea">
                             <p class="secretList__speech">04</p>
                             <div class="page__subtitle miniTitle highTitle">
-                                <h4>驚異のリピート率<span class="large__text">97</span>％？！</h4>
+                                <h4>驚異のリピート率<span class="large__text">97</span>％?!</h4>
                                 <!-- <img src="./assets/images/top/secret/img-secret_subtitle4.png" alt="" /> -->
                             </div>
                             <p class="page__text">
