--- a/src/service.html
+++ b/src/service.html
@@ -158,15 +158,15 @@
                     <img class="lower__chara--img1" src="./assets/images/service/service_main.svg" alt="" />
                     <img class="lower__chara--surround1" src="./assets/images/top/about/img-about_surround1.svg" alt="" />
                     <img class="lower__chara--surround2" src="./assets/images/top/about/img-about_surround2.svg" alt="" />
-                    <img class="lower__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                    <img class="lower__pinkCircle first" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
                     <img class="lower__pinkCircle second" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
                     <img class="lower__pinkCircle third" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
                     <img class="lower__pinkCircle forth" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                    <img class="lower__pinkCircle fifth" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
+                    <img class="lower__pinkCircle fifth" src="./assets/images/top/about/img-about_pinkKirakira_small.svg" alt="" />
                     <img class="lower__pinkCircle sixth" src="./assets/images/top/about/img-about_pinkKirakira.svg" alt="" />
-                    <img class="lower__whiteCircle first" src="./assets/images/top/about/img-about_whiteKirakira.svg"
+                    <img class="lower__whiteCircle first" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
                         alt="" />
-                    <img class="lower__whiteCircle second" src="./assets/images/top/about/img-about_whiteKirakira.svg"
+                    <img class="lower__whiteCircle second" src="./assets/images/top/about/img-about_whiteKirakira_small.svg"
                         alt="" />
                     <img class="lower__whiteCircle third" src="./assets/images/top/about/img-about_whiteKirakira.svg"
                         alt="" />
@@ -382,7 +382,7 @@
                 <p class="bgPinkText">TMC TMC TMC TMC TMC TMC TMC</p>
             </div>
         </section>
-        <section class="service__message message">
+        <section class="service__message lower__message">
             <img class="message__bg--title" src="./assets/images/message_title.svg" alt="">
             <img class="message__chara--img" src="./assets/images/message__chara.svg" alt="">
             <div class="message__inner">
