aboutページpc幅（1200px以上）作成

--- a/src/about.html
+++ b/src/about.html
@@ -298,84 +298,89 @@
                 <p class="page__subTitle">HISTORY</p>
                 <h2 class="page__title">TMCができるまで</h2>
             </div>
-            <div class=""></div>
-        </section>
-        <section class="service__about">
-            <div class="service__about--title">
-                <h3>対象サービス</h3>
-            </div>
-            <div class="grid__column about__column">
-                <div class="about__column--item">
-                    <div class="about__column--img">
-                        <img src="" alt="">
-                    </div>
-                    <p class="about__column--text"><span>{text}</span><span class="small">{smalltext}</span></p>
+            <div class="history__column">
+                <div class="history__line"></div>
+                <div class="history__item right">
+                    <img  class="history__chara history__chara1" src="./assets/images/about/about_history1.png" alt="">
+                    <p class="history__item--year">2006<span class="small">年</span></p>
+                    <p class="histroy__item--text">「たかくら伝説」として、芸人活動を開始。芸人活動の傍ら、10年以上続けている引越しのアルバイトの経験を活かし、数多くの著名人の引越しを手伝う。</p>
                 </div>
-            </div>
-            <div class="service__about--description">
-                <p></p>
-            </div>
-            <div class="more__btn--container">
-                <a class="more__btn" href="#">無料お見積もり</a>
-            </div>
-        </section>
-        <section class="service__flow">
-            <div class="page__title--inner">
-                <p class="page__subTitle">FLOW</p>
-                <h2>サービスの流れ</h2>
-            </div>
-            <div class="flow__inner">
-                <div class="flow__inner--title">
-                    <p></p>
+                <div class="history__item left">
+                    <img class="history__chara history__chara2" src="./assets/images/about/about_history2.png" alt="">
+                    <p class="history__item--year">2010<span class="small">年</span></p>
+                    <p class="histroy__item--text">「たかくら伝説」から<br>「たかくら引越センター」に、改名。</p>
                 </div>
-                <div class="flow__inner--slide">
-                    <img src="" alt="">
+                <div class="history__item right">
+                    <img class="history__chara history__chara3" src="./assets/images/about/about_history3.svg" alt="">
+                    <p class="history__item--year">2012<span class="small">年</span></p>
+                    <p class="histroy__item--text">軽貨物運送事業として、<br>「たかくら引越センター」を開業。</p>
                 </div>
-            </div>
-            <div class="service__flow--deco">
-                <img src="" alt="">
-            </div>
-        </section>
-        <section class="service__introduction">
-            <div class="page__title--inner">
-                <p class="page__subTitle">引越しが楽しくなる！</p>
-                <h2>こだわりの段ボール紹介</h2>
-            </div>
-            <div class="introduction__column">
-                <div class="introduction__size">
-                    <div class="size__tags">
-                        <div class="tag">小</div>
-                        <div class="tag">大</div>
-                    </div>
-                    <div class="size__img">
-                        <img src="" alt="">
-                    </div>
-                    <div class="size__pagenation">
-                        <div class="pagenation"></div>
-                        <div class="pagenation"></div>
-                    </div>
+                <div class="history__item left">
+                    <img class="history__chara history__chara4" src="./assets/images/about/about_history4.png" alt="">
+                    <p class="history__item--year">2014<span class="small">年</span></p>
+                    <p class="histroy__item--text">一般貨物自動車運送事業許可を取得。<br>（事業者番号460008314 関自貨第90号）</p>
                 </div>
-                <div class="introduction__point">
-                    <div class="point__img">
-
-                    </div>
-                    <div class="point__content">
-                        <p class="service__column--title"></p>
-                        <h4 class="point__content--title"></h4>
-                        <p class="point__content--text"></p>
-                    </div>
+                <div class="history__bgText">
+                    <p>2006</p>
+                    <p>2010</p>
+                    <p>2012</p>
+                    <p>2014</p>
                 </div>
             </div>
         </section>
-        <section class="service__message">
-            <img class="message__bg--title" src="" alt="">
-            <img class="message__chara--img" src="" alt="">
-            <div class="message__inner">
-                <p class="message__text"></p>
-                <div class="more__btn--container">
-                    <a class="more__btn" href="#">無料お見積もり</a>
+        <section class="about__company">
+            <div class="company__wrap">
+                <div class="page__title--inner">
+                    <p class="page__subTitle">COMPANY</p>
+                    <h2 class="page__title">会社概要</h2>
                 </div>
-            </div> 
+                <div class="company__column">
+                    <table class="company__table">
+                        <tbody>
+                            <tr>
+                                <th>名 称</th>
+                                <td>株式会社たかくら商会</td>
+                            </tr>
+                            <tr>
+                                <th>屋 号</th>
+                                <td>たかくら引越センター</td>
+                            </tr>
+                            <tr>
+                                <th>住 所</th>
+                                <td>〒181-0004 東京都三鷹市新川５丁目３−１</td>
+                            </tr>
+                            <tr>
+                                <th>代 表</th>
+                                <td>高倉 弘樹（たかくらこうき）</td>
+                            </tr>
+                            <tr>
+                                <th>設 立</th>
+                                <td>2013年</td>
+                            </tr>
+                            <tr>
+                                <th>事業内容</th>
+                                <td>運送業・リサイクル業・不動産業</td>
+                            </tr>
+                            <tr>
+                                <th>一般貨物自動車運送事業許可</th>
+                                <td>事業者番号460008314 関自貨第90号</td>
+                            </tr>
+                            <tr>
+                                <th>古物商許可証</th>
+                                <td>東京都公安委員会許可 第308931705739号 衣類古物取り扱い商</td>
+                            </tr>
+                            <tr>
+                                <th>適格請求書発行事業者</th>
+                                <td>T7012401024504</td>
+                            </tr>
+                            <tr>
+                                <th>連絡先</th>
+                                <td>TEL：0120-37-4514　FAX：0422-26-8521</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="footer">
