news一覧ページ修正・個別ページ作成

--- a/src/single.html
+++ b/src/single.html
@@ -147,67 +147,40 @@
             </div>
         </div> 
     </nav>
-    <main class="news__page">
-        <section class="news__archive">
-            <div class="page__title--inner">
-                <p class="page__subTitle">NEWS</p>
-                <h2 class="page__title">おしらせ</h2>
+    <main class="single__page">
+        <section class="single__post">
+            <div class="single__content">
+                <div class="single__title">
+                    <div class="single__title--meta">23.12.25<button>information</button></div>
+                    <div class="single__title--main">タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</div> 
+                </div>
+                <img class="single__img" src="./assets/images/news/single_sample.jpg" alt="記事画像">
+                <div class="single__text">
+                    <p>本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。</p>
+                </div>
+                <div class="single__dottedLine"></div>
+                <div class="single__footer">
+                    <img class="single__footer--img" src="./assets/images/news/single_footer.png" alt="たかくら引っ越しセンターロゴ">
+                    <div class="single__footer--info">
+                        <div class="single__footer--upper">
+                            <p>お引越しはたかくら引越センターへ！
+                                <br>合言葉は「引越はおもしろい！」</p>
+                        </div>
+                        <div class="single__footer--bottom">
+                            <p>たかくら引越センター</p>
+                            <p class="tel"><span class="small">TEL</span>0120-37-4514</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="news__tag">
+            <div class="single__pagenation">
                 <ul>
-                    <li class="active">information</li>
-                    <li>ブログ</li>
-                    <li>お役立ちコラム</li>
+                    <li class="prev"><a href=""><img src="./assets/images/news/prev_arrow.svg" alt="">前へ</a></li>
+                    <li class="next"><a href="">次へ<img src="./assets/images/news/next_arrow.svg" alt=""></a></li>
                 </ul>
             </div>
-            <div class="news__content">
-                <table class="news__table">
-                    <tbody>
-                        <tr>
-                            <th>23.12.25<button>information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
-                        </tr>
-                        <tr>
-                            <th>23.12.25<button>information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
-                        </tr>
-                        <tr>
-                            <th>23.12.25<button>information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
-                        </tr>
-                        <tr>
-                            <th>23.12.25<button>information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
-                        </tr>
-                        <tr>
-                            <th>23.12.25<button>information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
-                        </tr>
-                        <tr>
-                            <th>23.12.25<button>information</button></th>
-                            <td>タイトルが入ります。タイトルが入ります。タイトルが入ります。タイトルが入ります。</td>
-                            <td><a href="./single.html"></a></td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div class="news__pagenation">
-                    <ul>
-                        <li class="prev"><img src="./assets/images/news/prev_arrow.svg" alt=""></li>
-                        <li class="active">1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li class="next"><img src="./assets/images/news/next_arrow.svg" alt=""></li>
-                    </ul>
-                </div>
-                <div class="news__deco">
-                    <img src="./assets/images/news/news_chara.svg" alt="">
-                </div>
+            <div class="more__btn--container">
+                <a class="more__btn" href="./news.html">一覧へもどる</a>
             </div>
         </section>
     </main>
