chractersっページ反映

--- a/src/characters.html
+++ b/src/characters.html
@@ -186,20 +186,152 @@
                 <div class="member__grid">
                     <div class="member__item">
                         <div class="member__img">
-                            <img src="" alt="">
+                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
                         </div>
                         <div class="member__tag">
+                            <span>BOSS<span>
                         </div>
                         <div class="member__name">
-                            <p class="member__name--kanji"></p>
-                            <p class="member__name--romaji"></p>
+                            <p class="member__name--kanji">高倉 弘樹</p>
+                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
                         </div>
-                        <div class="member__discription"></div>
+                        <div class="member__discription">
+                            <p class="member__discription--title">好きな家具</p>
+                            <p class="member__discription--text">テキストテキストテキスト</p>
+                        </div>
+                    </div>
+                    <div class="member__item">
+                        <div class="member__img">
+                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                        </div>
+                        <div class="member__tag">
+                            <span>BOSS<span>
+                        </div>
+                        <div class="member__name">
+                            <p class="member__name--kanji">高倉 弘樹</p>
+                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                        </div>
+                        <div class="member__discription">
+                            <p class="member__discription--title">好きな家具</p>
+                            <p class="member__discription--text">テキストテキストテキスト</p>
+                        </div>
+                    </div>
+                    <div class="member__item">
+                        <div class="member__img">
+                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                        </div>
+                        <div class="member__tag">
+                            <span>BOSS<span>
+                        </div>
+                        <div class="member__name">
+                            <p class="member__name--kanji">高倉 弘樹</p>
+                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                        </div>
+                        <div class="member__discription">
+                            <p class="member__discription--title">好きな家具</p>
+                            <p class="member__discription--text">テキストテキストテキスト</p>
+                        </div>
+                    </div>
+                    <div class="member__item">
+                        <div class="member__img">
+                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                        </div>
+                        <div class="member__tag">
+                            <span>BOSS<span>
+                        </div>
+                        <div class="member__name">
+                            <p class="member__name--kanji">高倉 弘樹</p>
+                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                        </div>
+                        <div class="member__discription">
+                            <p class="member__discription--title">好きな家具</p>
+                            <p class="member__discription--text">テキストテキストテキスト</p>
+                        </div>
+                    </div>
+                    <div class="member__item">
+                        <div class="member__img">
+                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                        </div>
+                        <div class="member__tag">
+                            <span>BOSS<span>
+                        </div>
+                        <div class="member__name">
+                            <p class="member__name--kanji">高倉 弘樹</p>
+                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                        </div>
+                        <div class="member__discription">
+                            <p class="member__discription--title">好きな家具</p>
+                            <p class="member__discription--text">テキストテキストテキスト</p>
+                        </div>
+                    </div>
+                    <div class="member__item">
+                        <div class="member__img">
+                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                        </div>
+                        <div class="member__tag">
+                            <span>BOSS<span>
+                        </div>
+                        <div class="member__name">
+                            <p class="member__name--kanji">高倉 弘樹</p>
+                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                        </div>
+                        <div class="member__discription">
+                            <p class="member__discription--title">好きな家具</p>
+                            <p class="member__discription--text">テキストテキストテキスト</p>
+                        </div>
+                    </div>
+                    <div class="member__item">
+                        <div class="member__img">
+                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                        </div>
+                        <div class="member__tag">
+                            <span>BOSS<span>
+                        </div>
+                        <div class="member__name">
+                            <p class="member__name--kanji">高倉 弘樹</p>
+                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                        </div>
+                        <div class="member__discription">
+                            <p class="member__discription--title">好きな家具</p>
+                            <p class="member__discription--text">テキストテキストテキスト</p>
+                        </div>
+                    </div>
+                    <div class="member__item">
+                        <div class="member__img">
+                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                        </div>
+                        <div class="member__tag">
+                            <span>BOSS<span>
+                        </div>
+                        <div class="member__name">
+                            <p class="member__name--kanji">高倉 弘樹</p>
+                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                        </div>
+                        <div class="member__discription">
+                            <p class="member__discription--title">好きな家具</p>
+                            <p class="member__discription--text">テキストテキストテキスト</p>
+                        </div>
+                    </div>
+                    <div class="member__item">
+                        <div class="member__img">
+                            <img src="./assets/images/characters/member_img1.png" alt="メンバー紹介画像">
+                        </div>
+                        <div class="member__tag">
+                            <span>BOSS<span>
+                        </div>
+                        <div class="member__name">
+                            <p class="member__name--kanji">高倉 弘樹</p>
+                            <p class="member__name--romaji">TAKAKURA KOUKI</p>
+                        </div>
+                        <div class="member__discription">
+                            <p class="member__discription--title">好きな家具</p>
+                            <p class="member__discription--text">テキストテキストテキスト</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="lineBtn__wrap">
-                <div class="lineBtn"><a href=""></a></div>
+                <div class="lineBtn"><a href="">公式LINEスタンプ販売中！</a></div>
             </div>
         </section>
         <section class="service__message lower__message">
