リンク修正

--- a/src/about.html
+++ b/src/about.html
@@ -270,7 +270,7 @@
                 </div>
             </div>
             <div class="more__btn--container">
-                <a class="more__btn" href="#">無料お見積もり</a>
+                <a class="more__btn" href="./estimate.html">無料お見積もり</a>
             </div>
         </section>
         <section class="about__message">
