--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
                 <img class="news__inner--chara" src="./assets/images/top/news/img-news_chara.svg" alt="" />
             </div>
             <div class="more__btn--container">
-                <a class="more__btn" href="#">ニュース一覧</a>
+                <a class="more__btn" href="./news.html">ニュース一覧</a>
             </div>
         </section>
         <section class="about">
@@ -260,7 +260,7 @@
                 </p>
             </div>
             <div class="more__btn--container">
-                <a class="more__btn" href="#">TMCについて</a>
+                <a class="more__btn" href="./about.html">TMCについて</a>
             </div>
             <div class="about__chara--img2">
                 <img src="./assets/images/top/about/img-about_chara2.svg" />
@@ -321,7 +321,7 @@
             </div>
             <p class="service__minText">※３ヶ月以上ご連絡がつかない場合は<br class="sp-br" />処分させていただきます</p>
             <div class="more__btn--container">
-                <a class="more__btn" href="#">詳しくはこちら</a>
+                <a class="more__btn" href="./service.html">詳しくはこちら</a>
             </div>
         </section>
         <div class="scrolTextInner bg-yellow">
@@ -354,7 +354,7 @@
                             <p class="page__text">引越しの作業中または引越し終了後、荷物についたタバコの臭い気になりませんか？たかくら引越センターの作業員は、「完全禁煙」を徹底しております。
                             </p>
                             <div class="more__btn--container">
-                                <a class="more__btn pinkBtn" href="#">サービスについて</a>
+                                <a class="more__btn pinkBtn" href="./service.html">サービスについて</a>
                             </div>
                         </div>
                     </div>
@@ -379,7 +379,7 @@
                             </div>
                             <p class="page__text">芸人活動の傍ら20年以上引越しの仕事を続けている代表をはじめ、引越歴10年以上のベテランスタッフが作業を行います。</p>
                             <div class="more__btn--container">
-                                <a class="more__btn pinkBtn" href="#">従業員紹介はこちら</a>
+                                <a class="more__btn pinkBtn" href="./characters.html">従業員紹介はこちら</a>
                             </div>
                         </div>
                         <div class="secretList__item--img">
@@ -474,7 +474,7 @@
                             ぜひ一度、ご相談ください。
                         </p>
                         <div class="more__btn--container">
-                            <a class="more__btn" href="#">無料お見積もり</a>
+                            <a class="more__btn" href="./estimate.html">無料お見積もり</a>
                         </div>
                     </div>
                 </div>
