リンク修正

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
                         <a href="./estimate.html"><div class="estimate__btn"><img src="./assets/images/click.svg" alt=""><span>無料お見積もり</span></div></a>
                         <a href="tel:120374514">
                             <div class="tel__btn">                        
-                                <a class="tel__btn--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                                <div class="tel__btn--icon"><img src="./assets/images/icon_tel.svg" alt="tel" /></div>
                                 <div class="telNumberInner">
                                     <p class="tel__telSpeech first">みんな</p>
                                     <p class="tel__telSpeech second">ヨッコイショ！</p>
