serviceページsp修正

--- a/src/service.html
+++ b/src/service.html
@@ -355,13 +355,13 @@
                     <div class="about__column--img">
                         <img src="./assets/images/service/about_service7.png" alt="">
                     </div>
-                    <p class="about__column--text"><span>クレーンでの<br>搬入・搬出</span><span class="small">（有料・委託）</span></p>
+                    <p class="about__column--text"><span>クレーンでの<br>搬入•搬出</span><span class="small">（有料•委託）</span></p>
                 </div>
                 <div class="about__column--item">
                     <div class="about__column--img">
                         <img src="./assets/images/service/about_service8.png" alt="">
                     </div>
-                    <p class="about__column--text"><span>エアコン<br>取外し・取付</span><span class="small">（有料・委託）</span></p>
+                    <p class="about__column--text">エアコン<br>取外し•取付<span class="small">（有料•委託）</span></p>
                 </div>
             </div>
             <div class="service__about--description">
