リンク修正

--- a/src/index.html
+++ b/src/index.html
@@ -404,7 +404,7 @@
                             </div>
                             <p class="page__text">「引越しを楽しんでほしい」そんな想いを込めて作った、積めば積むほどかわいいオリジナル段ボール。引越し後の活用法もご紹介しています！</p>
                             <div class="more__btn--container">
-                                <a class="more__btn pinkBtn" href="#">さらに詳しく見る</a>
+                                <a class="more__btn pinkBtn" href="./service.html#introduction">さらに詳しく見る</a>
                             </div>
                         </div>
                     </div>
@@ -427,7 +427,7 @@
                                 たかくら引越センターの肌感ではリピート率97％！非常に安全なサポート体制を実現していることから、多くの著名人にも安心してご利用いただいております。
                             </p>
                             <div class="more__btn--container">
-                                <a class="more__btn pinkBtn" href="#">サービスについて</a>
+                                <a class="more__btn pinkBtn" href="./service.html">サービスについて</a>
                             </div>
                         </div>
                         <div class="secretList__item--img">
