--- a/src/service.html
+++ b/src/service.html
@@ -409,7 +409,7 @@
                 <img src="" alt="">
             </div>
         </section>
-        <section class="service__introduction">
+        <section id="introduction" class="service__introduction">
             <div class="page__title--inner">
                 <p class="page__subTitle">引越しが楽しくなる！</p>
                 <h2 class="page__title">こだわりの<br class="sp-br">段ボール紹介</h2>
