--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <header class="header">
         <div class="header__inner">
             <div class="headerLogo">
-                <img src="./assets/images/logo.svg" alt="たかくら引越センター" />
+                <a href="./index.html"><img src="./assets/images/logo.svg" alt="たかくら引越センター" /></a>
             </div>
             <div class="header__container">
                 <div class="snsNav">
@@ -51,7 +51,7 @@
                             <a href=""><img src="./assets/images/icon_line.svg" alt="line" /></a>
                         </li>
                         <li class="snsNav__list--item">
-                            <a href=""><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                            <a href="tel:0120374514"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
                         </li>
                     </ul>
                 </div>
@@ -591,15 +591,15 @@
                             TEL：0422-26-8520　FAX：0422-26-8521
                         </p>
                     </div>
-                    <div class="footer__tel">
-                        <a class="footer__tel--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></a>
+                    <a class="footer__tel" href="tel:0120374514">
+                        <div class="footer__tel--icon" href="#"><img src="./assets/images/icon_tel.svg" alt="tel" /></div>
                         <div class="footer__telNumberInner">
                             <p class="footer__telSpeech first">みんな</p>
                             <p class="footer__telSpeech second">ヨッコイショ！</p>
                             <p class="footer__telNumber">0120-37-4514</p>
                             <p class="footer__reception">受付時間 ●：●～●：●</p>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="footerNav__container">
                     <div class="footerNav__column1">
